--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -13,12 +13,21 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-html": "^6.4.11",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/state": "^6.5.3",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@replit/codemirror-vim": "^6.3.0",
     "@z-os/apps-loader": "workspace:*",
     "@z-os/core": "workspace:*",
     "@z-os/sdk": "workspace:*",
     "@z-os/ui": "workspace:*",
+    "codemirror": "^6.0.2",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
