feat: add 15 new apps, CI/CD pipeline, and full documentation
New Apps:
- Books, Console, Contacts, Dictionary, Disk Utility
- Font Book, Freeform, Maps, News, Passwords
- Podcasts, Preview, Stocks, Translate, Voice Memos

CI/CD:
- GitHub Actions workflow for build/test
- Automatic npm publishing on version tags
- GitHub Pages deployment on main push

Documentation:
- Full README with 36 apps catalog
- Keyboard shortcuts reference
- Architecture overview
- App development guide

--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@replit/codemirror-vim": "^6.3.0",
+    "@z-os/apps": "workspace:*",
     "@z-os/apps-loader": "workspace:*",
     "@z-os/core": "workspace:*",
     "@z-os/sdk": "workspace:*",
